// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`вызовет правильный ресурс для типа exterior 1`] = `
Object {
  "panorama": Object {
    "data": Object {
      "id": "panorama_id",
      "status": "COMPLETED",
    },
    "type": "exterior",
  },
}
`;

exports[`вызовет правильный ресурс для типа interior 1`] = `
Object {
  "panorama": Object {
    "data": Object {
      "id": "panorama_id",
      "status": "COMPLETED",
    },
    "type": "interior",
  },
}
`;
